# primal

./: .gitignore  CMakeLists.txt  main.cpp
base/: MatrixMultiply.cpp  MatrixMultiply.h  Operation.cpp  Operation.h  OperationWithParams.cpp  OperationWithParams.h
utils/: Matrix.cpp  Matrix.h
